--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,6 @@ body{
     margin-right: 300px;
     margin-top: 100px;
     margin-bottom: 0px;
-    font-family: sans-serif;
+    font-family: serif;
     
 }
